[metadata]
name = monlycee
version = 1.0
description = An API ent.iledefrance.fr
author = Egsagon
author_email = egsagon12@gmail.com
url = https://github.com/Egsagon/monlycee-net-api
license = GPL-3.0
license_file = LICENSE
platforms = unix, linux, win32, cygwin
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11

[options]
packages =
    ent
install_requires = 
    requests>=2
    beautifulsoup4>=4
python_requires = >=3.11
package_dir=
    =src